# gooey

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/gooey/: DrawingContext.hpp  Event.hpp  View.hpp  Window.hpp  WindowManager.hpp  fwd.hpp  gooey.hpp
include/gooey/cmp/: Button.hpp  Knob.hpp  Label.hpp  Panel.hpp  SDLSurfaceView.hpp  SplitView.hpp  TextEditor.hpp
include/gooey/geom/: Point.hpp  Rect.hpp  Size.hpp
src/: DrawingContext.cpp  Event.cpp  View.cpp  Window.cpp  WindowManager.cpp  debug.cpp
src/cmp/: Button.cpp  Knob.cpp  Label.cpp  Panel.cpp  SDLSurfaceView.cpp  SplitView.cpp  TextEditor.cpp
